# ting-encoder

./: CMakeLists.txt  LICENSE  README.md
LINUX/: CMakeLists.txt  main.cpp
OSX/: CMakeLists.txt
OSX/encoder/encoder.xcodeproj/: project.pbxproj
OSX/encoder/encoder.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OSX/encoder/encoder.xcodeproj/project.xcworkspace/xcuserdata/laizhenqi.xcuserdatad/: UserInterfaceState.xcuserstate
OSX/encoder/encoder.xcodeproj/xcuserdata/laizhenqi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OSX/encoder/encoder.xcodeproj/xcuserdata/laizhenqi.xcuserdatad/xcschemes/: encoder.xcscheme  xcschememanagement.plist
android/Encoder/app/: build.gradle
android/Encoder/app/src/main/: AndroidManifest.xml
android/Encoder/app/src/main/assets/: vertex_shader.sd
android/Encoder/app/src/main/java/me/olivine/ui/: MainActivity.java
android/Encoder/app/src/main/res/layout/: activity_main.xml
android/Encoder/app/src/main/res/values/: strings.xml
android/Encoder/gradle/wrapper/: gradle-wrapper.properties
src/: aes.h  rc4.cpp  rc4.h
