CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

MESSAGE(STATUS ${CMAKE_SYSTEM_NAME})
IF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	ADD_DEFINITIONS(-DOS_OSX)
	ADD_SUBDIRECTORY(OSX)
ELSEIF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	ADD_DEFINITIONS(-DOS_LINUX)
	ADD_SUBDIRECTORY(LINUX)
ELSEIF (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	ADD_DEFINITIONS(-DOS_WIN)
ELSEIF (${CMAKE_SYSTEM_NAME} MATCHES "Android")
	ADD_DEFINITIONS(-DOS_ANDROID)
ELSE()
	MESSAGE(STATUS "OS not detected")
ENDIF()